--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.5.4",
+    "gsap": "^3.12.5",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18"
