--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.12.5",
     "next": "^14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
