--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
