--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001712",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "next": "^14.2.13",
